--- a/repo_size.ipynb
+++ b/repo_size.ipynb
@@ -146,13 +146,229 @@
     "df = pd.DataFrame(files_data)\n",
     "\n",
     "# Summing line counts by category\n",
-    "df.groupby('Category').agg({'File Name': ['count'], \\\n",
+    "df.groupby(['Category']).agg({'File Name': ['count'], \\\n",
     "                            'Line Count': ['sum']}).reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
+   "id": "d8a70c38-3d32-4f86-b23a-9e68a1552c83",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>Directory</th>\n",
+       "      <th>count</th>\n",
+       "      <th>Line Count sum</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7</td>\n",
+       "      <td>.git\\objects\\pack</td>\n",
+       "      <td>2</td>\n",
+       "      <td>85726</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>15</td>\n",
+       "      <td>doc\\source\\tutorials</td>\n",
+       "      <td>21</td>\n",
+       "      <td>36516</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>17</td>\n",
+       "      <td>optbinning\\binning</td>\n",
+       "      <td>23</td>\n",
+       "      <td>11661</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>13</td>\n",
+       "      <td>doc\\source\\_images</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9945</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>28</td>\n",
+       "      <td>tests\\results</td>\n",
+       "      <td>27</td>\n",
+       "      <td>6010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>25</td>\n",
+       "      <td>tests</td>\n",
+       "      <td>18</td>\n",
+       "      <td>4653</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>19</td>\n",
+       "      <td>optbinning\\binning\\multidimensional</td>\n",
+       "      <td>10</td>\n",
+       "      <td>4102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>18</td>\n",
+       "      <td>optbinning\\binning\\distributed</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>20</td>\n",
+       "      <td>optbinning\\binning\\piecewise</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2520</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>26</td>\n",
+       "      <td>tests\\data</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2253</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>23</td>\n",
+       "      <td>optbinning\\scorecard</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2038</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>24</td>\n",
+       "      <td>optbinning\\scorecard\\counterfactual</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1718</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>0</td>\n",
+       "      <td>.</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1171</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>12</td>\n",
+       "      <td>doc\\source</td>\n",
+       "      <td>23</td>\n",
+       "      <td>1119</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>21</td>\n",
+       "      <td>optbinning\\binning\\uncertainty</td>\n",
+       "      <td>2</td>\n",
+       "      <td>827</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2</td>\n",
+       "      <td>.git\\hooks</td>\n",
+       "      <td>13</td>\n",
+       "      <td>790</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>16</td>\n",
+       "      <td>optbinning</td>\n",
+       "      <td>7</td>\n",
+       "      <td>575</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>22</td>\n",
+       "      <td>optbinning\\metrics</td>\n",
+       "      <td>3</td>\n",
+       "      <td>284</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>1</td>\n",
+       "      <td>.git</td>\n",
+       "      <td>5</td>\n",
+       "      <td>119</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>11</td>\n",
+       "      <td>doc</td>\n",
+       "      <td>2</td>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    index                            Directory  count  Line Count sum\n",
+       "0       7                    .git\\objects\\pack      2           85726\n",
+       "1      15                 doc\\source\\tutorials     21           36516\n",
+       "2      17                   optbinning\\binning     23           11661\n",
+       "3      13                   doc\\source\\_images     10            9945\n",
+       "4      28                        tests\\results     27            6010\n",
+       "5      25                                tests     18            4653\n",
+       "6      19  optbinning\\binning\\multidimensional     10            4102\n",
+       "7      18       optbinning\\binning\\distributed      9            2567\n",
+       "8      20         optbinning\\binning\\piecewise      8            2520\n",
+       "9      26                           tests\\data      2            2253\n",
+       "10     23                 optbinning\\scorecard      7            2038\n",
+       "11     24  optbinning\\scorecard\\counterfactual      9            1718\n",
+       "12      0                                    .      7            1171\n",
+       "13     12                           doc\\source     23            1119\n",
+       "14     21       optbinning\\binning\\uncertainty      2             827\n",
+       "15      2                           .git\\hooks     13             790\n",
+       "16     16                           optbinning      7             575\n",
+       "17     22                   optbinning\\metrics      3             284\n",
+       "18      1                                 .git      5             119\n",
+       "19     11                                  doc      2              55"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Directory size\n",
+    "kala = df.groupby(['Directory']).agg({'File Name': ['count'], \\\n",
+    "                            'Line Count': ['sum']}).reset_index()\n",
+    "\n",
+    "kala.columns = ['Directory', 'count', 'Line Count sum']\n",
+    "kala.sort_values('Line Count sum', ascending=False).head(10).reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "0989d25c-0ba5-46ca-961c-9088fbd3f991",
    "metadata": {},
    "outputs": [
@@ -417,12 +633,13 @@
        "19  Jupyter Notebook  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Largest files\n",
     "df.sort_values('Line Count', ascending=False).head(20).reset_index()"
    ]
   }
