--- a/gini_performance_test.ipynb
+++ b/gini_performance_test.ipynb
@@ -715,6 +715,38 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### E. Test the implementation against PROC package in R"
+      ],
+      "metadata": {
+        "id": "RvZkwhpTkL7a"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# library(pROC)\n",
+        "\n",
+        "# # Generate some synthetic data\n",
+        "# set.seed(42)\n",
+        "# n <- 100  # Number of observations\n",
+        "# labels <- rbinom(n, 1, 0.5)  # Binary outcome\n",
+        "# scores <- rnorm(n, mean = labels, sd = 0.5)  # Predictions from the model\n",
+        "\n",
+        "# roc_obj <- roc(labels, scores)\n",
+        "\n",
+        "# # Calculate AUC with confidence intervals\n",
+        "# auc_with_ci_delong <- ci(roc_obj, of=\"auc\", conf.level=0.95, method=\"delong\")\n",
+        "# print(auc_with_ci)"
+      ],
+      "metadata": {
+        "id": "7Sjq-nUMkH61"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
