--- a/fannie_mae_import.ipynb
+++ b/fannie_mae_import.ipynb
@@ -1280,12 +1280,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "6f431e6c-c9f3-41e6-884f-4fbc958c78fe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------------------+--------+\n",
+      "|is_first_credit_event|   count|\n",
+      "+---------------------+--------+\n",
+      "|                 NULL|40970717|\n",
+      "|                 true|  603675|\n",
+      "|                false|   61760|\n",
+      "+---------------------+--------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "data.groupBy(\"Default\").count().show()"
+    "data.groupBy(\"is_first_credit_event\").count().show()"
    ]
   }
  ],
