--- a/pyspark_distributed_woe.ipynb
+++ b/pyspark_distributed_woe.ipynb
@@ -1,9 +1,47 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "bb4d0c14-8ff1-4b98-81e2-5dc80df78a1c",
+   "metadata": {},
+   "source": [
+    "## Efficient computation of optimal WoE binning in Pyspark with OptBinning\n",
+    "\n",
+    "This code performs \"Optimal Binning\" for multiple numerical variables in a dataset using Apache Spark and the `OptBinning` library. The process involves dividing the variables into manageable chunks and calculating the Information Value (IV) for each variable. The IV is a metric commonly used in feature selection for predictive modeling.\n",
+    "\n",
+    "The primary purpose of this code is to offload the computation to Spark worker nodes and limit the size of the dataset being processed at once. By processing the data in smaller chunks, the code ensures that broadcasting the dataset to the worker nodes is efficient and meaningful, reducing memory overhead and improving performance.\n",
+    "\n",
+    "### Key Steps:\n",
+    "\n",
+    "1. **SparkContext Initialization**: \n",
+    "   - A SparkContext (`sc`) is initialized or retrieved to enable distributed computation.\n",
+    "\n",
+    "2. **Binning Function**: \n",
+    "   - The `binning_function` takes a variable and a broadcasted chunk of data as inputs.\n",
+    "   - It performs optimal binning on the variable and calculates the Information Value (IV) and binning splits for that variable.\n",
+    "\n",
+    "3. **Chunk Processing**: \n",
+    "   - The `process_in_chunks` function splits the dataset into smaller chunks, each containing up to `n` variables.\n",
+    "   - For each chunk:\n",
+    "     - The chunk data is broadcasted to all nodes in the Spark cluster to minimize data shuffling.\n",
+    "     - The `binning_function` is applied to each variable in the chunk in parallel using Spark's `map` function, distributing the workload across worker nodes.\n",
+    "     - The results (IV and splits) for each variable in the chunk are collected.\n",
+    "\n",
+    "4. **Data Preparation**: \n",
+    "   - The data is converted from a PySpark DataFrame to a Pandas DataFrame.\n",
+    "   - A list of variables (excluding the target) is created.\n",
+    "\n",
+    "5. **Execution**: \n",
+    "   - The dataset's variables are processed in chunks, and the results are aggregated into a final list.\n",
+    "\n",
+    "6. **Output**: \n",
+    "   - The results for each variable, including the variable name, its Information Value, and the splits used in binning, are printed."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "0a2bdb0a-dc23-4618-a6cb-0f10901bd46d",
+   "execution_count": null,
+   "id": "24637b1a-54e8-41a3-b11d-97dab81eebbc",
    "metadata": {},
    "outputs": [],
    "source": [
