--- a/openai_struct_output.ipynb
+++ b/openai_struct_output.ipynb
@@ -5,7 +5,7 @@
    "id": "93db234e-5133-467e-8c40-180649f2ac81",
    "metadata": {},
    "source": [
-    "### Extract best risk drivers based on Somers D\n",
+    "### Extract best risk drivers\n",
     "\n",
     "\n",
     "**Introducing Structured Outputs in the API**  \n",
