--- a/openai_struct_output.ipynb
+++ b/openai_struct_output.ipynb
@@ -533,7 +533,7 @@
    "id": "c9bb77fd-21ef-4047-a6f4-e3916cfc5d38",
    "metadata": {},
    "source": [
-    "#### E. Analyse risk drivers"
+    "#### F. Analyse risk drivers"
    ]
   },
   {
