--- a/pymc_stresstest.ipynb
+++ b/pymc_stresstest.ipynb
@@ -14,7 +14,7 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "d9695c41166b4ca6a90591041078a088": {
+        "da8751c93f114fe7b39911feba9a43f2": {
           "model_module": "@jupyter-widgets/output",
           "model_name": "OutputModel",
           "model_module_version": "1.0.0",
@@ -27,7 +27,7 @@
             "_view_module": "@jupyter-widgets/output",
             "_view_module_version": "1.0.0",
             "_view_name": "OutputView",
-            "layout": "IPY_MODEL_f38762cf2a704f1ab5f5e120d722be09",
+            "layout": "IPY_MODEL_7ebca1c1a4c843849ef2edf41ce3f2d3",
             "msg_id": "",
             "outputs": [
               {
@@ -41,7 +41,7 @@
             ]
           }
         },
-        "f38762cf2a704f1ab5f5e120d722be09": {
+        "7ebca1c1a4c843849ef2edf41ce3f2d3": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -93,7 +93,7 @@
             "width": null
           }
         },
-        "8ec5c8c3942643669f66e5c330e65823": {
+        "711f7712e4ea4d489cd0cadcdc0baa51": {
           "model_module": "@jupyter-widgets/output",
           "model_name": "OutputModel",
           "model_module_version": "1.0.0",
@@ -106,21 +106,21 @@
             "_view_module": "@jupyter-widgets/output",
             "_view_module_version": "1.0.0",
             "_view_name": "OutputView",
-            "layout": "IPY_MODEL_1b5fe8635d314af49843da443a4c25b6",
+            "layout": "IPY_MODEL_5432f17a5fd54c4089e8834bec36fd24",
             "msg_id": "",
             "outputs": [
               {
                 "output_type": "display_data",
                 "data": {
-                  "text/plain": "Sampling chain 1, 0 divergences \u001b[32m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[35m100%\u001b[0m \u001b[36m0:00:00\u001b[0m / \u001b[33m0:00:11\u001b[0m\n",
-                  "text/html": "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Sampling chain 1, 0 divergences <span style=\"color: #008000; text-decoration-color: #008000\">━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span> <span style=\"color: #800080; text-decoration-color: #800080\">100%</span> <span style=\"color: #008080; text-decoration-color: #008080\">0:00:00</span> / <span style=\"color: #808000; text-decoration-color: #808000\">0:00:11</span>\n</pre>\n"
+                  "text/plain": "Sampling chain 1, 0 divergences \u001b[32m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[35m100%\u001b[0m \u001b[36m0:00:00\u001b[0m / \u001b[33m0:00:12\u001b[0m\n",
+                  "text/html": "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Sampling chain 1, 0 divergences <span style=\"color: #008000; text-decoration-color: #008000\">━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</span> <span style=\"color: #800080; text-decoration-color: #800080\">100%</span> <span style=\"color: #008080; text-decoration-color: #008080\">0:00:00</span> / <span style=\"color: #808000; text-decoration-color: #808000\">0:00:12</span>\n</pre>\n"
                 },
                 "metadata": {}
               }
             ]
           }
         },
-        "1b5fe8635d314af49843da443a4c25b6": {
+        "5432f17a5fd54c4089e8834bec36fd24": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -179,7 +179,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Overview\n",
+        "# Bayesian stress testing\n",
         "\n",
         "This notebook performs **Bayesian stress testing** on a small portfolio of loans using user-provided priors and observed data. The key objectives of the code are:\n",
         "\n",
@@ -384,8 +384,8 @@
         "    # Prior for PD: User believes PD ≈ 2%\n",
         "    prior_params_pd = (2, 98)   # Alpha = 2, Beta = 98 (Mean PD ≈ 2%)\n",
         "\n",
-        "    # Prior for LGD: User believes LGD ≈ 60%\n",
-        "    prior_params_lgd = (2, 8)   # Alpha = 6, Beta = 4 (Mean LGD ≈ 60%)\n",
+        "    # Prior for LGD: User believes LGD ≈ 20%\n",
+        "    prior_params_lgd = (2, 8)   # Alpha = 2, Beta = 8 (Mean LGD ≈ 20%)\n",
         "\n",
         "    # Perform Bayesian stress test with observed LGD data\n",
         "    trace, results = bayesian_stress_test_with_lgd_data(n_loans, n_defaults, prior_params_pd, prior_params_lgd, observed_lgds)\n",
@@ -407,16 +407,16 @@
           "base_uri": "https://localhost:8080/",
           "height": 667,
           "referenced_widgets": [
-            "d9695c41166b4ca6a90591041078a088",
-            "f38762cf2a704f1ab5f5e120d722be09",
-            "8ec5c8c3942643669f66e5c330e65823",
-            "1b5fe8635d314af49843da443a4c25b6"
+            "da8751c93f114fe7b39911feba9a43f2",
+            "7ebca1c1a4c843849ef2edf41ce3f2d3",
+            "711f7712e4ea4d489cd0cadcdc0baa51",
+            "5432f17a5fd54c4089e8834bec36fd24"
           ]
         },
         "id": "-IYAU0V3zDj-",
-        "outputId": "d0f95d47-5972-4c5f-e845-dd99c493467f"
+        "outputId": "cb0a26e3-b927-4061-df31-958db075e53b"
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
@@ -427,7 +427,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "d9695c41166b4ca6a90591041078a088"
+              "model_id": "da8751c93f114fe7b39911feba9a43f2"
             }
           },
           "metadata": {}
@@ -451,7 +451,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "8ec5c8c3942643669f66e5c330e65823"
+              "model_id": "711f7712e4ea4d489cd0cadcdc0baa51"
             }
           },
           "metadata": {}
@@ -490,15 +490,6 @@
           "metadata": {}
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "esIJzXR53eJt"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
