--- a/univariate_analysis_ifrs.ipynb
+++ b/univariate_analysis_ifrs.ipynb
@@ -17,15 +17,31 @@
     "pd.set_option('display.max_rows', None)\n",
     "pd.set_option('display.max_columns', None)\n",
     "pd.set_option('display.width', None)\n",
-    "pd.set_option('display.max_colwidth', None)\n",
+    "pd.set_option('display.max_colwidth', None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b084442e-ed62-4b29-8716-8bf911781dbb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import statsmodels.api as sm\n",
+    "from statsmodels.tsa.stattools import adfuller\n",
+    "from scipy.stats import pearsonr\n",
     "\n",
     "def perform_univariate_analysis(data, target, expected_signs=None, \n",
     "                                model_types=[\"ols\", \"glm\"], separate_tables=False):\n",
     "    \"\"\"\n",
     "    Perform univariate analysis on macro factors using OLS and/or GLM (with a logit link).\n",
-    "    \n",
+    "\n",
     "    For the GLM analysis the target is scaled to the unit interval if necessary.\n",
-    "    \n",
+    "    Additionally, for each statistical test we add outcome fields indicating whether\n",
+    "    the hypothesis was confirmed or failed.\n",
+    "\n",
     "    Parameters\n",
     "    ----------\n",
     "    data : pd.DataFrame\n",
@@ -39,12 +55,12 @@
     "    separate_tables : bool, optional\n",
     "        If True, return a dict with separate DataFrames for each model type.\n",
     "        Otherwise, return a single DataFrame with columns for each model type.\n",
-    "    \n",
+    "\n",
     "    Returns\n",
     "    -------\n",
     "    results : pd.DataFrame or dict of pd.DataFrame\n",
     "        If separate_tables is False, a single DataFrame with one row per factor and columns \n",
-    "        for common, OLS, and GLM statistics. Otherwise, a dictionary with keys \"OLS\" and \"GLM\".\n",
+    "        for common, OLS, and GLM statistics (including hypothesis outcomes). Otherwise, a dictionary with keys \"OLS\" and \"GLM\".\n",
     "    \"\"\"\n",
     "    if expected_signs is None:\n",
     "        expected_signs = {}\n",
@@ -97,18 +113,16 @@
     "    # -------------------------------------------------------------------------\n",
     "    # 3. Loop over each factor and run the requested analyses.\n",
     "    # -------------------------------------------------------------------------\n",
-    "    # We will build two lists of dictionaries: one for OLS and one for GLM.\n",
+    "    # We'll build two lists of dictionaries: one for OLS and one for GLM.\n",
     "    ols_results = []\n",
     "    glm_results = []\n",
     "    \n",
-    "    # Loop over each factor (i.e. each numeric column)\n",
     "    for factor in factor_data.columns:\n",
     "        # Skip non-numeric columns.\n",
     "        if not np.issubdtype(factor_data[factor].dtype, np.number):\n",
     "            continue\n",
     "        \n",
-    "        # Prepare common descriptive stats (which depend only on the factor itself).\n",
-    "        # (These are computed once per factor and included in both models.)\n",
+    "        # Compute common descriptive stats (and the ADF test) for the factor.\n",
     "        factor_series = factor_data[factor].dropna()\n",
     "        common_stats = {}\n",
     "        try:\n",
@@ -123,9 +137,15 @@
     "            common_stats[\"ADF Test Statistic\"] = adf_test[0]\n",
     "            common_stats[\"ADF p-Value\"]          = adf_test[1]\n",
     "            common_stats[\"ADF Lags\"]             = adf_test[2]\n",
+    "            # Add an outcome for the ADF test.\n",
+    "            if not np.isnan(adf_test[1]):\n",
+    "                common_stats[\"ADF Test Outcome\"] = (\"H0 rejected (Stationary)\" if adf_test[1] < 0.05 \n",
+    "                                                      else \"H0 not rejected (Non-stationary)\")\n",
+    "            else:\n",
+    "                common_stats[\"ADF Test Outcome\"] = \"NA\"\n",
     "        except Exception as e:\n",
     "            for key in [\"Mean\", \"Std\", \"Min\", \"Max\", \"Skewness\", \"Kurtosis\", \n",
-    "                        \"ADF Test Statistic\", \"ADF p-Value\", \"ADF Lags\"]:\n",
+    "                        \"ADF Test Statistic\", \"ADF p-Value\", \"ADF Lags\", \"ADF Test Outcome\"]:\n",
     "                common_stats[key] = np.nan\n",
     "            print(f\"Error computing common stats for factor {factor}: {e}\")\n",
     "        \n",
@@ -133,19 +153,18 @@
     "        # A. OLS Analysis (Original Target)\n",
     "        # -------------------------------\n",
     "        if \"ols\" in model_types:\n",
-    "            # Build temporary DataFrame for OLS.\n",
     "            df_temp = pd.DataFrame({\n",
     "                \"x\": factor_data[factor],\n",
     "                \"y\": y\n",
     "            }).dropna()\n",
     "            \n",
-    "            # Check if factor has sufficient variation.\n",
     "            if df_temp[\"x\"].nunique() < 2 or df_temp.empty:\n",
     "                ols_dict = {\"Factor\": factor}\n",
     "                for field in [\"OLS Coefficient\", \"OLS Std Error\", \"OLS t-Statistic\", \"OLS p-Value\",\n",
     "                              \"OLS R-squared\", \"OLS Adjusted R-squared\", \"OLS F-Statistic\", \n",
-    "                              \"OLS AIC\", \"OLS BIC\", \"Durbin-Watson\", \"Correlation with Target\",\n",
-    "                              \"Correlation p-Value\"]:\n",
+    "                              \"OLS AIC\", \"OLS BIC\", \"Durbin-Watson\", \n",
+    "                              \"Correlation with Target\", \"Correlation p-Value\",\n",
+    "                              \"OLS Hypothesis Outcome\", \"OLS Correlation Test Outcome\"]:\n",
     "                    ols_dict[field] = np.nan\n",
     "                ols_dict.update(common_stats)\n",
     "            else:\n",
@@ -170,7 +189,6 @@
     "                                \"OLS R-squared\", \"OLS Adjusted R-squared\", \"OLS F-Statistic\", \n",
     "                                \"OLS AIC\", \"OLS BIC\", \"Durbin-Watson\"]:\n",
     "                        ols_dict[key] = np.nan\n",
-    "                # Compute Pearson correlation (with original target).\n",
     "                try:\n",
     "                    corr_coef, corr_p = pearsonr(df_temp[\"x\"], df_temp[\"y\"])\n",
     "                    ols_dict[\"Correlation with Target\"] = corr_coef\n",
@@ -180,7 +198,21 @@
     "                    ols_dict[\"Correlation with Target\"] = np.nan\n",
     "                    ols_dict[\"Correlation p-Value\"]     = np.nan\n",
     "                \n",
-    "                # Check sign correctness if provided.\n",
+    "                # Add hypothesis outcome for the OLS regression (relationship significance)\n",
+    "                if not np.isnan(ols_dict.get(\"OLS p-Value\", np.nan)):\n",
+    "                    ols_dict[\"OLS Hypothesis Outcome\"] = (\"Confirmed\" if ols_dict[\"OLS p-Value\"] < 0.05 \n",
+    "                                                          else \"Failed\")\n",
+    "                else:\n",
+    "                    ols_dict[\"OLS Hypothesis Outcome\"] = \"NA\"\n",
+    "                \n",
+    "                # Add outcome for the Pearson correlation test.\n",
+    "                if not np.isnan(ols_dict.get(\"Correlation p-Value\", np.nan)):\n",
+    "                    ols_dict[\"OLS Correlation Test Outcome\"] = (\"Confirmed\" if ols_dict[\"Correlation p-Value\"] < 0.05 \n",
+    "                                                                else \"Failed\")\n",
+    "                else:\n",
+    "                    ols_dict[\"OLS Correlation Test Outcome\"] = \"NA\"\n",
+    "                \n",
+    "                # Check sign correctness.\n",
     "                exp_sign = expected_signs.get(factor, \"NA\")\n",
     "                if exp_sign in [\"positive\", \"negative\"]:\n",
     "                    if not np.isnan(ols_dict.get(\"OLS Coefficient\", np.nan)):\n",
@@ -190,7 +222,6 @@
     "                else:\n",
     "                    ols_dict[\"Sign Correctness\"] = \"NA\"\n",
     "                \n",
-    "                # Include the common stats.\n",
     "                ols_dict.update(common_stats)\n",
     "            \n",
     "            ols_results.append(ols_dict)\n",
@@ -201,35 +232,33 @@
     "        if \"glm\" in model_types:\n",
     "            df_temp = pd.DataFrame({\n",
     "                \"x\": factor_data[factor],\n",
-    "                \"y\": y_glm  # use the transformed target\n",
+    "                \"y\": y_glm  # using the transformed target\n",
     "            }).dropna()\n",
     "            \n",
     "            if df_temp[\"x\"].nunique() < 2 or df_temp.empty:\n",
     "                glm_dict = {\"Factor\": factor}\n",
     "                for field in [\"GLM Coefficient\", \"GLM Std Error\", \"GLM z-Value\", \"GLM p-Value\",\n",
-    "                              \"GLM Pseudo R-squared\", \"GLM AIC\", \"GLM BIC\", \"Correlation with Target\",\n",
-    "                              \"Correlation p-Value\"]:\n",
+    "                              \"GLM Pseudo R-squared\", \"GLM AIC\", \"GLM BIC\",\n",
+    "                              \"Correlation with Target\", \"Correlation p-Value\",\n",
+    "                              \"GLM Hypothesis Outcome\", \"GLM Correlation Test Outcome\"]:\n",
     "                    glm_dict[field] = np.nan\n",
     "                glm_dict.update(common_stats)\n",
     "            else:\n",
     "                glm_dict = {\"Factor\": factor}\n",
     "                try:\n",
     "                    X_glm = sm.add_constant(df_temp[\"x\"])\n",
-    "                    # Use Logit (capitalized) to avoid the deprecation warning.\n",
     "                    glm_model = sm.GLM(df_temp[\"y\"], X_glm, \n",
     "                                       family=sm.families.Binomial(sm.families.links.Logit())).fit()\n",
     "                    \n",
     "                    glm_dict[\"GLM Coefficient\"] = glm_model.params[\"x\"]\n",
     "                    glm_dict[\"GLM Std Error\"]   = glm_model.bse[\"x\"]\n",
-    "                    glm_dict[\"GLM z-Value\"]       = glm_model.tvalues[\"x\"]  # GLM uses tvalues as z-values\n",
-    "                    glm_dict[\"GLM p-Value\"]       = glm_model.pvalues[\"x\"]\n",
-    "                    glm_dict[\"GLM AIC\"]           = glm_model.aic\n",
+    "                    glm_dict[\"GLM z-Value\"]     = glm_model.tvalues[\"x\"]  # tvalues used as z-values\n",
+    "                    glm_dict[\"GLM p-Value\"]     = glm_model.pvalues[\"x\"]\n",
+    "                    glm_dict[\"GLM AIC\"]         = glm_model.aic\n",
     "                    if hasattr(glm_model, \"bic_llf\"):\n",
     "                        glm_dict[\"GLM BIC\"] = glm_model.bic_llf\n",
     "                    else:\n",
     "                        glm_dict[\"GLM BIC\"] = glm_model.bic\n",
-    "                        \n",
-    "                    # Compute McFadden's pseudo R-squared.\n",
     "                    X_null = np.ones((len(df_temp), 1))\n",
     "                    glm_null = sm.GLM(df_temp[\"y\"], X_null, \n",
     "                                      family=sm.families.Binomial(sm.families.links.Logit())).fit()\n",
@@ -239,7 +268,6 @@
     "                    for key in [\"GLM Coefficient\", \"GLM Std Error\", \"GLM z-Value\", \"GLM p-Value\",\n",
     "                                \"GLM Pseudo R-squared\", \"GLM AIC\", \"GLM BIC\"]:\n",
     "                        glm_dict[key] = np.nan\n",
-    "                # Pearson correlation for GLM (using transformed target).\n",
     "                try:\n",
     "                    corr_coef, corr_p = pearsonr(df_temp[\"x\"], df_temp[\"y\"])\n",
     "                    glm_dict[\"Correlation with Target\"] = corr_coef\n",
@@ -249,7 +277,18 @@
     "                    glm_dict[\"Correlation with Target\"] = np.nan\n",
     "                    glm_dict[\"Correlation p-Value\"]     = np.nan\n",
     "                \n",
-    "                # Check sign correctness for GLM as well.\n",
+    "                if not np.isnan(glm_dict.get(\"GLM p-Value\", np.nan)):\n",
+    "                    glm_dict[\"GLM Hypothesis Outcome\"] = (\"Confirmed\" if glm_dict[\"GLM p-Value\"] < 0.05 \n",
+    "                                                          else \"Failed\")\n",
+    "                else:\n",
+    "                    glm_dict[\"GLM Hypothesis Outcome\"] = \"NA\"\n",
+    "                \n",
+    "                if not np.isnan(glm_dict.get(\"Correlation p-Value\", np.nan)):\n",
+    "                    glm_dict[\"GLM Correlation Test Outcome\"] = (\"Confirmed\" if glm_dict[\"Correlation p-Value\"] < 0.05 \n",
+    "                                                                else \"Failed\")\n",
+    "                else:\n",
+    "                    glm_dict[\"GLM Correlation Test Outcome\"] = \"NA\"\n",
+    "                \n",
     "                exp_sign = expected_signs.get(factor, \"NA\")\n",
     "                if exp_sign in [\"positive\", \"negative\"]:\n",
     "                    if not np.isnan(glm_dict.get(\"GLM Coefficient\", np.nan)):\n",
@@ -274,8 +313,7 @@
     "            out[\"GLM\"] = pd.DataFrame(glm_results)\n",
     "        return out\n",
     "    else:\n",
-    "        # Combine the dictionaries: join by factor name.\n",
-    "        # Create a DataFrame with \"Factor\" as key.\n",
+    "        # Combine the dictionaries by factor name.\n",
     "        factors = sorted(set(\n",
     "            ([d[\"Factor\"] for d in ols_results] if \"ols\" in model_types else []) +\n",
     "            ([d[\"Factor\"] for d in glm_results] if \"glm\" in model_types else [])\n",
@@ -300,7 +338,6 @@
     "# Example Usage with a Dummy Dataset\n",
     "# -------------------------------------------------------------------------\n",
     "if __name__ == \"__main__\":\n",
-    "    # Create a dummy dataset.\n",
     "    np.random.seed(42)\n",
     "    dates = pd.date_range(start=\"2020-01-01\", periods=100, freq=\"MS\")\n",
     "    dummy_data = pd.DataFrame({\n",
@@ -310,11 +347,8 @@
     "        \"factor_3\": np.random.normal(0, 1, 100)\n",
     "    })\n",
     "    \n",
-    "    # Create a continuous target variable.\n",
-    "    # For OLS, use the original target.\n",
     "    target = 0.5 * dummy_data[\"factor_1\"] - 0.2 * dummy_data[\"factor_2\"] + np.random.normal(0, 1, 100)\n",
     "    \n",
-    "    # Define expected coefficient signs.\n",
     "    expected_signs = {\"factor_1\": \"positive\", \"factor_2\": \"negative\", \"factor_3\": \"positive\"}\n",
     "    \n",
     "    # Run the analysis using both models and return separate tables.\n",
