--- a/test_subgraphs.ipynb
+++ b/test_subgraphs.ipynb
@@ -119,8 +119,8 @@
     "\n",
     "        state   = graph.get_state(config, subgraphs=True).values\n",
     "\n",
-    "        print(f'Intermediate state - {chunk}')\n",
-    "        print(f'Global state: {state}')\n",
+    "        print(f'\\nIntermediate state - {chunk}\\n')\n",
+    "        print(f'\\nGlobal state: {state}\\n')\n",
     "\n",
     "print(\"\\n── final merged state ──\")\n",
     "final_state = graph.invoke(init_state, config)\n",
